# ProjectB-SteveSite

./: .env.template  .gitignore  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt
deploy_tools/: .env.template  con_remote_redis.py  con_remote_sqlite_db.py  deploy.sh.template  docker-compose.yml.template  nginx.conf.template
dev_tools/: con_redis.py  otp_generator.py
dev_tools/mock_image_hosting/: app.py
steve_site/: __init__.py  auth.py  blog.py  config.py  db_api.py  image.py  otp_manager.py  release_notes.py  schema.sql
steve_site/static/: Release Notes.md  auth.css  blog-detail.css  blog.css  blog.js  easymde.min.js  main-app-container.css  main-footer.css  main-header.css  main-nav.css  main-side-nav.css  main.css  main.js  styles.css
steve_site/static/css/: blog-detail.css  blog-editor.css  blog.css  main.css
steve_site/static/js/: auth.js  back-to-top.js  blog-action.js  blog-copy-to-clp.js  blog-list-load-more.js  blog.js  easymde.min.js  release-note-btn.js  release-notes-btn.js  toast.js
steve_site/templates/: 401.html  403.html  404.html  409.html  blog.html  blog_detail.html  blog_editor.html  image_post.html  index.html  login.html  register.html  release-note.html
steve_site/templates/auth/: login.html  new-password.html  register.html  renew-password.html  renew-username.html  reset-password.html
steve_site/templates/blog/: blog.html  blog_detail.html  blog_editor.html
steve_site/templates/status-code/: 404.html  405.html
tests/: client_actor.py  conftest.py  test_blog.py  test_login.py  test_user_mng.py
(+14 files in other folders)
