[build-system]
requires = ["setuptools >= 82.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steve_site"
version = "0.9.0"
description = "An Indie Web Project by steve3ussr"
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
]
dependencies = ["flask >= 3.1.3",
                "flask-session >= 0.8.0",
                "pyotp >= 2.9.0",
                "python-dotenv >= 1.2.2",
                "redis >= 8.0.0",
                "nh3 >= 0.3.5",
                "mistune >= 3.2.1",
                "boto3 >= 1.43.33"
]

[tool.setuptools]
packages = ["steve_site"]
include-package-data = true